--- a/style.css
+++ b/style.css
@@ -31,11 +31,16 @@ nav {
 .logo,
 .nav-links {
     flex: 1;
+    color: var(--text-color);
 }
 
 .logo a {
-    color: var(--text-color);
+    color: inherit;
     text-decoration: none;
+}
+
+.logo:hover {
+    color: #7c7b7b;
 }
 
 .nav-links {
