--- a/style.css
+++ b/style.css
@@ -20,6 +20,13 @@ header {
     padding-top: 0.3rem;
     padding-right: 2rem;
     padding-left: 2rem;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    background-color: var(--accent-color);
+    opacity: 80%;
+    z-index: 100;
 }
 
 nav {
@@ -39,7 +46,8 @@ nav {
     text-decoration: none;
 }
 
-.logo:hover {
+.logo:hover,
+.nav-links a:hover {
     color: #7c7b7b;
 }
 
@@ -58,11 +66,8 @@ nav {
     text-decoration: none;
 }
 
-.nav-links a:hover {
-    color: #7c7b7b;
-}
-
-.nav-links a.active {
+.nav-links a.active,
+.logo a.active {
     border-bottom: 2px solid var(--text-color);
 }
 
@@ -72,7 +77,7 @@ main {
     justify-content: center;
     align-items: center;
     text-align: center;
-    padding: 60px;
+    padding-top: 8rem;
 }
 
 .content {
