--- a/style.css
+++ b/style.css
@@ -75,9 +75,9 @@ main {
     flex-grow: 1;
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     text-align: center;
-    padding-top: 8rem;
+    padding-top: 7rem;
 }
 
 .content {
@@ -93,6 +93,10 @@ footer {
     padding-top: 2rem;
 }
 
+footer span a {
+    color: #9a9a9a;
+}
+
 /* Home page */
 body.content {
     text-align: center;
@@ -106,12 +110,19 @@ body.content {
 
 .social-links {
     margin-bottom: 1rem;
+    display: flex;
+    gap: 20px;
+    justify-content: center;
 }
 
 .social-links a {
     color: var(--text-color);
     font-size: 1.5rem;
-    margin: 0 0.5rem;
+    transition: 0.3s ease;
+}
+
+.social-links a:hover {
+    transform: scale(1.1)translateY(-10px);
 }
 
 .main-buttons button {
@@ -222,10 +233,102 @@ code {
 .timeline-content {
     background-color: var(--code-bg-color);
     border-radius: 10px;
-    padding: 10px 20px;
+    padding: 10px 15px;
     transition: 0.3s ease-in-out;
 }
 
 .timeline-content:hover {
     transform: scale(1.05);
+}
+
+/* Blog page */
+.blog-header {
+    padding-top: 7rem;
+    margin-bottom: -5rem;
+    text-align: center;
+}
+
+.blog-posts {
+    max-width: 800px;
+    width: 70vw;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    list-style-type: none;
+    padding: 0;
+    margin: 0 auto;
+}
+
+.blog-posts h2 {
+    margin-bottom: 0.5rem;
+}
+
+.blog-post {
+    background-color: var(--code-bg-color);
+    padding: 1rem;
+    border-radius: 5px;
+    transition: transform 0.3s;
+}
+
+.blog-post:hover {
+    transform: scale(1.02);
+}
+
+.blog-post a {
+    color: var(--text-color);
+    text-decoration: none;
+}
+
+.blog-post h2 {
+    margin-bottom: 0.5rem;
+}
+
+.blog-meta {
+    color: var(--accent-color);
+    font-size: 0.9rem;
+    margin-bottom: 0.5rem;
+}
+
+.blog-excerpt {
+    color: var(--text-color);
+}
+
+/* Blog post page */
+
+.post-container {
+    padding: 7rem;
+    width: 50vw;
+    text-align: left;
+}
+
+nav[aria-label="blog-post-nav"] {
+    font-size: 0.9rem;
+    padding-left: 2rem;
+    color: var(--accent-color);
+    text-align: left;
+    display: inline-block;
+}
+
+nav[aria-label="blog-post-nav"] a {
+    color: var(--text-color);
+    text-decoration: none;
+    transition: color 0.3s;
+}
+
+nav[aria-label="blog-post-nav"] a:hover {
+    color: var(--accent-color);
+}
+
+.blog-post-header {
+    padding-left: 2rem;
+}
+
+body.blog-post-1 main.content {
+    text-align: left;
+    max-width: 800px;
+    line-height: 1.6;
+    color: var(--text-color);
+    padding: 2rem;
+    margin-top: 1rem;
 }
