--- a/style.css
+++ b/style.css
@@ -125,7 +125,7 @@ body.content {
     transform: scale(1.1)translateY(-10px);
 }
 
-.main-buttons button {
+button {
     background-color: var(--accent-color);
     color: var(--text-color);
     border: none;
@@ -138,7 +138,7 @@ body.content {
     font-family: 'Code New Roman', sans-serif;
 }
 
-.main-buttons button:hover {
+button:hover {
     background-color: #666;
 }
 
@@ -331,4 +331,73 @@ body.blog-post-1 main.content {
     color: var(--text-color);
     padding: 2rem;
     margin-top: 1rem;
+}
+
+/* Contacts page */
+body.contacts main .content {
+    display: flex;
+    flex-direction: column;
+    gap: 1.5rem;
+    align-items: center;
+    text-align: center;
+}
+
+body.contacts main .content h1 {
+    margin-top: -1rem;
+}
+
+.contact-links a {
+    color: var(--text-color);
+    transition: 0.3s ease;
+}
+
+.contact-links a:hover {
+    transform: scale(1.1)translateY(-10px);
+}
+
+.social-item {
+    display: flex;
+    gap: 10px;
+    flex-direction: row;
+    align-items: center;
+    text-align: center;
+}
+
+.social-item a {
+    text-decoration: none;
+    color: inherit;
+}
+
+.social-item i {
+    font-size: 1.5rem;
+}
+
+form {
+    display: grid;
+    grid-template-columns: 1fr 4fr;
+    gap: 1.5rem;
+    width: 60vw;
+    max-width: 600px;
+}
+
+label {
+    font-weight: bold;
+}
+
+input,
+textarea {
+    padding: 10px;
+    border: 1px solid var(--text-color);
+    border-radius: 4px;
+    background-color: var(--bg-color);
+    color: var(--text-color);
+}
+
+input[type="reset"] {
+    margin-left: 5px;
+    margin-right: 5px;
+    font-size: medium;
+    border-radius: 10px;
+    font-family: 'Code New Roman', sans-serif;
+    cursor: pointer;
 }
