--- a/style.css
+++ b/style.css
@@ -310,7 +310,7 @@ code {
 
 .blog-posts {
     max-width: 600px;
-    width: 70vw;
+    width: 80vw;
     border-radius: 10px;
     display: flex;
     flex-direction: column;
@@ -473,4 +473,57 @@ input[type="reset"] {
     font-family: 'Code New Roman', sans-serif;
     border: 2px solid var(--accent-color);
     cursor: pointer;
+}
+
+/* Project page */
+.project-cards {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    padding: 20px;
+}
+
+.card {
+    width: 350px;
+    height: 200px;
+    perspective: 1000px;
+}
+
+.card-inner {
+    position: relative;
+    width: 90%;
+    height: 90%;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+}
+
+.card:hover .card-inner {
+    transform: rotateY(180deg);
+}
+
+.card-front,
+.card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    border-radius: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.card-front {
+    background-color: var(--code-bg-color);
+    color: var(--text-color);
+}
+
+.card-back {
+    background-color: var(--code-bg-color);
+    color: var(--text-color);
+    transform: rotateY(180deg);
+    text-align: left;
+    padding: 20px;
+    box-sizing: border-box;
 }
