--- a/projects/projects.css
+++ b/projects/projects.css
@@ -1,13 +1,10 @@
 /* Project page */
-body.projects main .content h1 {
-    margin-top: -1rem;
-}
-
 .project-cards {
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
-    padding: 20px;
+    align-items: flex-start;
+    gap: 20px;
 }
 
 .card {
@@ -18,15 +15,20 @@ body.projects main .content h1 {
 
 .card-inner {
     position: relative;
-    width: 90%;
-    height: 90%;
+    width: 100%;
+    height: 100%;
     transition: transform 0.6s;
     transform-style: preserve-3d;
+    cursor: pointer;
 }
 
-.card:hover .card-inner {
+input[type="checkbox"]:checked+label .card-inner {
     transform: rotateY(180deg);
 }
+
+/* .card:hover .card-inner {
+    transform: rotateY(180deg);
+} */
 
 .card-front,
 .card-back {
@@ -44,6 +46,7 @@ body.projects main .content h1 {
 .card-front {
     background-color: var(--code-bg-color);
     color: var(--text-color);
+    text-align: center;
 }
 
 .card-back {
